# Guild3ModStuff

./: thqnocfg.json
modloader/: thqno_api_x64.sln
modloader/PolyHook_2_0/: CMakeLists.txt
modloader/PolyHook_2_0/headers/Virtuals/: VFuncSwapHook.hpp
modloader/PolyHook_2_0/sources/: VFuncSwapHook.cpp
modloader/thqno_api_x64/: Guild3Stuff.h  thqno_api_x64.cpp  thqno_api_x64.def  thqno_api_x64.vcxproj  thqno_api_x64.vcxproj.filters  thqno_api_x64_asm.asm
rust_hack-mod/: Cargo.toml  build.bat
rust_hack-mod/chiter-old/: Cargo.toml
rust_hack-mod/chiter-old/src/: lib.rs
rust_hack-mod/src/: lib.rs
