[package]
name = "rust_hack"
version = "0.1.0"
authors = ["fink <lostchaos3@gmail.com>"]
edition = "2018"
[lib]
crate-type = ["dylib"]
name="guild3mod"
[dependencies]
chiter= {path= "chiter-old"}
kernel32-sys = "0.2.2"
lazy_static = "1.3.0"
winapi = {version="0.3", features = ["minwindef","consoleapi"] } 
detour = "0.6.0"