[package]
name = "chiter"
version = "0.4.1"
authors = ["boat <boat@cock.li>", "Fabian Brand <fabian@fabianbrand.de>"]
description = "Memory editing library aimed at game hacking."
repository = "https://github.com/boatboatboatboat/chiter"
license = "MIT"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = {version="0.3", features = ["minwindef"] } 
